# kuber

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cardano-Kuber-Api.html  Cardano-Kuber-Http-Spec.html  Changelog.md  DEVELOPER.md  Jenkinsfile  LISENCE  README.md  TODO.md  cabal.project  cabal.project.freeze  doc-index-B.html  doc-index-C.html  doc-index-K.html  doc-index-V.html  docker-compose.yml  easy-cardano.cabal  kuber.cabal  kuber.haddock  kuber.yaml  kubær.cabal  migration_guide_alonzo_to_babbge.md
.ci/: Dockerfile  Dockerfile.hydra  build  build.Dockerfile  copy-libraries.sh  docker-entrypoint.sh  entrypoint.sh  merge-root.sh
.github/: CONTAINER.md  copilot-instructions.md
.github/workflows/: build-docker-images.yml  build-multiarch.yml  docusaurus.yml  gh-pages.yaml
app/: Main.hs
doc/: example-metadata.md  example-minting.md  example-multiple-scripts-plutus.md  example-plutus-signature.md  example-plutus.md  example-transfer.md  example-tx-validity.md
docs/: .gitignore  docusaurus.config.ts  example-metadata.md  example-minting.md  example-plutus.md  example-transfer.md  example-vasil-features.md  json-api-reference.md  package.json  sidebars.ts  test.mjs  tsconfig.json  tutorial-marketplace.md  validate-docs.js
docs/docs/: architecture.md  hydra_feature_analysis.md  kuber-api-reference.md  kuber-hydra-api-reference.md  milestones.md  scenarioTests.md  sequenceDiagrams.md  tutorial.md
docs/docs/hydra-js-client/: abort.md  buildTx.md  close.md  commit.md  contest.md  decommit.md  fanout.md  getting-started.md  initialize.md  installation.md  local-devnet.md  queryHeadState.md  queryProtocolParameters.md  queryUtxo.md  submitTx.md  testnet_or_mainnet.md
docs/docs/release-notes/: 4.0.0.md  4.0.1.md  4.1.0.md
docs/docs/sequenceDiagrams/: abort_head.md  close_head.md  commit_utxos.md  decommit_utxos.md  fanout_head.md  initialize_head.md  query_protocol_params.md  query_utxos.md
docs/docs/tutorials/: build_tx.md  close_head.md  commit_utxos.md  fanout.md  hydra-escrow-app.md  initialize_head.md
docs/kuber-haskell-library/: Cardano-Kuber-Console-ConsoleWritable.html  doc-index-All.html  doc-index-E.html  doc-index-F.html  doc-index-H.html  doc-index-M.html  doc-index-S.html  doc-index-W.html  doc-index.html
docs/src/css/: custom.css
docs/src/pages/: index.tsx
examples/: example-metadata.md  tutorial-marketplace.md
haskell_library/: Cardano-Kuber-Data-Parsers.html  Cardano-Kuber-Util.html  doc-index-A.html  doc-index-D.html  doc-index-G.html  doc-index-I.html  doc-index-N.html  doc-index-Q.html  doc-index-R.html  doc-index-T.html
hydra/: Architecture.md  Readme.md  kuber-hydra.md
hydra_docusaurus/: 404.html  index.html  sitemap.xml
hydra_docusaurus/assets/css/: styles.57668dc8.css  styles.db6454c9.css  styles.dc641f52.css  styles.dd239764.css
hydra_docusaurus/assets/js/: 0167a11b.42cf4d0d.js  0167a11b.5779d271.js  0167a11b.b917f328.js  0167a11b.d2eb3978.js  0167a11b.f8865278.js  05624f8a.22bb0fa9.js  05624f8a.4f876ff3.js  05624f8a.94f4b32b.js  05624f8a.b772816e.js  05624f8a.c50c04ad.js  05624f8a.d199f0b3.js  0608152f.3f3e9b6a.js  06e3ff66.28599854.js  06e3ff66.e0b191ea.js  099946de.0f92461d.js  099946de.1f9111fe.js  099946de.533b7f1c.js  09d52713.16e957d3.js  09d52713.569ab9cb.js  09d52713.9e4ffdad.js  09d52713.ca35042b.js  0ce09edb.d81d0a7e.js  0df94e62.2bd37243.js  0df94e62.3231bff1.js  0df94e62.617aef70.js  0df94e62.839bc557.js  0df94e62.a82e7acd.js  0df94e62.e00ec923.js  1259.a6616376.js  1259.a7a59bcb.js  165.07aa807b.js  1741bfc3.0a85f330.js  1741bfc3.396828af.js  1741bfc3.4041112b.js  17896441.68ea531d.js  17896441.db489923.js  17896441.fa903ad2.js  1825.78def1e5.js  1825.cbbafc61.js  186.53530446.js  (+386 more)
hydra_docusaurus/docs/architecture/: index.html
hydra_docusaurus/docs/hydra_feature_analysis/: index.html
hydra_docusaurus/docs/kuber-api-reference/: index.html
hydra_docusaurus/docs/kuber-hydra-api-reference/: index.html
hydra_docusaurus/docs/milestones/: index.html
hydra_docusaurus/docs/scenarioTests/: index.html
hydra_docusaurus/docs/sequenceDiagrams/: index.html
hydra_docusaurus/docs/tutorial/: index.html
hydra_docusaurus/markdown-page/: index.html
kontract-example/: kontract-example.cabal
kontract-example/src/: Main.hs
kuber-hydra/: CHANGELOG.md  LICENSE  README.md  docker-compose.yml  kuber-hydra.cabal
kuber-hydra/app/: Main.hs
kuber-hydra/app/Api/: HydraClient.hs  Spec.hs  Swagger.hs
kuber-hydra/app/Websocket/: Aeson.hs  Commands.hs  Connect.hs  Forwarder.hs  Middleware.hs  SocketConnection.hs  TxBuilder.hs  Utils.hs
kuber-hydra/demo/: docker-compose.yml  setup-devnet.sh
kuber-hydra/devnet/: docker-compose.yml  generate-credentials.sh  reset-cluster.sh  seed-devnet.sh  setup-devnet.sh
kuber-hydra/devnet/cardano-node/: genesis-byron.json  topology.json  (+4 more)
kuber-server/: kuber-server.cabal
kuber-server/app/: Main.hs
kuber-server/src/Kuber/Server/: Api.hs  Core.hs  Helpers.hs  Model.hs  ServantError.hs  Spec.hs
kuber-test-lib/: CHANGELOG.md  kuber-test-lib.cabal
kuber-test-lib/src/: Main.hs
kuber-test-lib/src/Cardano/Kuber/Test/: Common.hs  HasTestnet.hs  KuberTestnet.hs  TestInterceptor.hs  Testnet.hs
kuber_haskell_library/: Cardano-Kuber-Data-Models.html  doc-index-L.html  doc-index-P.html  doc-index-U.html  index.html  meta.json
kuber_hydra_docusaurus/: 404.html  index.html  sitemap.xml
kuber_hydra_docusaurus/markdown-page/: index.html
playground/: .env  .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vue.config.js
playground/public/: haskell_grammar.json
playground/src/: main.ts  types.ts
server/: Core.hs  Main.hs  MediaType.hs  Server.hs  kuber-server.cabal
server/Kuber/Server/: Core.hs  MediaType.hs  Spec.hs
server/app/: Main.hs
server/src/Kuber/Server/: Core.hs  MediaType.hs  Spec.hs
test/: Main.hs
test-reports/hydra/: index.html
test/Test/: AddressParsing.hs  ApiTest.hs  ChainApiTests.hs  KuberApiTests.hs  MarketPlaceWorkflow.hs  ParserTest.hs  TestGen.hs  TxBuilderJSON.hs
(+181 files in other folders)
