cabal-version:      2.4
name:               kuber
version:            2.3.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license:     MIT
author:      Sudip Bhattarai
maintainer:  Sudip Bhattarai

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

library
  default-language: Haskell2010
  exposed-modules:
    Cardano.Kuber.Api
    Cardano.Kuber.Util
    Cardano.Kuber.Console.ConsoleWritable
    Cardano.Kuber.Data.Models
    Cardano.Kuber.Data.Parsers

  other-modules:
    Cardano.Kuber.Error
    Cardano.Kuber.Core.ChainInfo
    Cardano.Kuber.Core.TxBuilder
    Cardano.Kuber.Core.TxFramework
    Cardano.Kuber.Data.TxBuilderAeson
    Cardano.Kuber.Utility.ChainInfoUtil
    Cardano.Kuber.Utility.WalletUtil
    Cardano.Kuber.Utility.QueryHelper
    Cardano.Kuber.Utility.DataTransformation
    Cardano.Kuber.Utility.Text
    Cardano.Kuber.Utility.ScriptUtil

    -- Plutus.Contract.Wallet.Utils
  hs-source-dirs: src
  build-depends:
      base >= 4.9 && <5
    , containers
    , bytestring
    , serialise
    , cborg
    , cardano-binary
    , text
    , filepath
    , directory
    , aeson
    , text-conversions
    , cardano-api
    , cardano-ledger-core
    , cardano-ledger-babbage
    , cardano-ledger-alonzo
    , cardano-ledger-shelley
    , cardano-ledger-shelley-ma
    , cardano-slotting
--    , shelley-spec-ledger
    , plutus-ledger-api
    , plutus-tx
    , ouroboros-consensus
    , ouroboros-network
    , vector
    , transformers
    , unordered-containers
    , time

test-suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  other-modules:
    Test.ParserTest

  build-depends:
      base >= 4.9 && <5
    , kuber
    , QuickCheck -any
    , tasty -any
    , tasty-hunit -any
    , containers
    , bytestring
    , serialise
    , cborg
    , cardano-binary
    , text
    , aeson
    , text-conversions
    , cardano-api
    , cardano-ledger-alonzo
    , cardano-ledger-shelley
    , cardano-slotting
    , plutus-ledger-api
    , plutus-tx
    , ouroboros-network
    , cardano-binary
    , vector
    , unordered-containers
