cabal-version:      2.4
name:               kuber
version:            3.0.0.5

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license:     MIT
author:      Sudip Bhattarai
maintainer:  Sudip Bhattarai

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  default-language: Haskell2010
  exposed-modules:
    Cardano.Kuber.Api
    Cardano.Kuber.Util
    Cardano.Kuber.Console.ConsoleWritable
    Cardano.Kuber.Data.Models
    Cardano.Kuber.Data.Parsers
    Cardano.Kuber.Http.Spec

  other-modules:
    Cardano.Kuber.Error
    Cardano.Kuber.Core.TxScript
    Cardano.Kuber.Core.ChainInfo
    Cardano.Kuber.Core.LocalNodeChainApi
    Cardano.Kuber.Core.Kontract
    Cardano.Kuber.Core.ChainAPI
    Cardano.Kuber.Core.TxBuilder
    Cardano.Kuber.Core.TxFramework
    Cardano.Kuber.Core.KuberAPI
    Cardano.Kuber.Data.TxBuilderAeson
    Cardano.Kuber.Data.EraUpdate
    Cardano.Kuber.Utility.ChainInfoUtil
    Cardano.Kuber.Utility.WalletUtil
    Cardano.Kuber.Utility.QueryHelper
    Cardano.Kuber.Utility.DataTransformation
    Cardano.Kuber.Utility.Text
    Cardano.Kuber.Utility.ScriptUtil
    Cardano.Kuber.Utility.Misc
    Cardano.Kuber.Http.Client
    Cardano.Kuber.Http.MediaType
  
  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
     -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -fobject-code
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

  hs-source-dirs: src
  build-depends:
      base >= 4.14 && <5
    , containers
    , bytestring
    , bech32
    , serialise
    , cborg
    , cardano-binary
    , text
    , filepath
    , directory
    , aeson >= 1.5.6.0
    , text-conversions
    , cardano-api ^>= 9.1
    , cardano-data >= 1.0
    , cardano-ledger-binary
    , cardano-ledger-core 
    , cardano-ledger-babbage
    , cardano-ledger-alonzo >= 1.6.0
    , cardano-ledger-shelley
    , cardano-ledger-api 
    , cardano-ledger-mary
    , cardano-ledger-conway
    , cardano-crypto-class
    , cardano-slotting
    , plutus-ledger-api
    , plutus-tx
    , ouroboros-consensus
    , ouroboros-network
    , ouroboros-network-protocols
    , vector
    , transformers
    , unordered-containers
    , time
    ,  servant
    ,  servant-client
    ,  http-media
    ,  http-client
    , network-uri
    , http-types
    , http-client-tls
    , lens
    , data-default
    , io-classes-mtl
    , ordered-containers

test-suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  other-modules:
    Test.ParserTest
    Test.ApiTest

  build-depends:
      base >= 4.9 && <5
    , kuber
    , QuickCheck -any
    , tasty -any
    , tasty-hunit -any
    , containers
    , bytestring
    , serialise
    , cborg
    , cardano-binary
    , text
    , aeson
    , text-conversions
    , cardano-api 
    , cardano-data 
    , cardano-api-gen
    , cardano-ledger-alonzo >= 1.6.0
    , cardano-ledger-shelley
    , cardano-ledger-conway
    , cardano-slotting
    , plutus-ledger-api
    , plutus-tx
    , ouroboros-network
    , cardano-binary
    , vector
    , unordered-containers
    , hedgehog
    , directory
  
  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -fobject-code
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas  
