cabal-version:      2.4
name:               kubær
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license: Apache-2.0
author:             Sudip Bhattarai
maintainer:         Sudip Bhattarai

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

library
  exposed-modules:

    Cardano.Contrib.Kubær.Util
    Cardano.Contrib.Kubær.Api
    Cardano.Contrib.Kubær.ChainInfo
    Cardano.Contrib.Kubær.Error
    Cardano.Contrib.Kubær.Models
    Cardano.Contrib.Kubær.TxBuilder
    Cardano.Contrib.Kubær.TxFramework
    Cardano.Contrib.Kubær.Parsers
  other-modules:


    -- Plutus.Contract.Wallet.Utils
  hs-source-dirs: src
  build-depends:
      base >= 4.9 && <5
    , containers
    , bytestring
    , serialise
    , cborg
    , cardano-binary
    , text
    , filepath
    , directory
    , aeson
    , text-conversions
    , cardano-api
    , cardano-ledger-alonzo
    , cardano-ledger-shelley
    , cardano-slotting
--    , shelley-spec-ledger
    , plutus-ledger-api
    , plutus-tx
    , ouroboros-network
    , cardano-binary
    , cborg
    , vector
    , unordered-containers

executable kuber
  main-is:  Main.hs
  hs-source-dirs: server
  other-modules:
    Core
    Server
    MediaType

  build-depends:
      base >= 4.9 && <5
    , containers
    , bytestring
    , serialise
    , text
    , filepath
    , directory
    , aeson
    , text-conversions
    , cardano-api
    , cardano-ledger-alonzo
    , cardano-ledger-shelley
    , cardano-slotting
    , plutus-ledger-api
    , plutus-tx
    , ouroboros-network
    , kubær
    , servant
    , servant-server
    , servant-errors
    , servant-exceptions
    , wai
    , servant-exceptions-server
    , warp
    , cborg
    , http-types
    , http-media
    , wai-cors
    , cardano-binary
    , cardano-ledger-core

