cabal-version:      2.4
name:               kontract-example
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Sudip
maintainer:         sudipbhattarai100@gmail.com


executable kontract-example
  default-language: Haskell2010
  main-is: Main.hs
  other-modules:

    -- Plutus.Contract.Wallet.Utils
  hs-source-dirs: src 

  build-depends:
      kuber
    , cardano-api
    , bytestring
    , text
    , containers
    , base